--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.6
 
+
 repositories {
-	mavenRepo urls: "http://localhost:8081/nexus/content/groups/public/"
-}
+        maven {
+            url 'http://localhost:8081/nexus/content/groups/public/'
+        }
+    }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.0-milestone-5'
@@ -17,5 +21,3 @@ dependencies {
     testCompile 'junit:junit-dep:4.10'
     testCompile 'org.spockframework:spock-core:0.5-groovy-1.8'
 }
-
-
