--- a/build.gradle
+++ b/build.gradle
@@ -7,17 +7,25 @@ sourceCompatibility = 1.6
 
 
 repositories {
-        maven {
-            url 'http://localhost:8081/nexus/content/groups/public/'
-        }
+    maven {
+        url 'http://localhost:8081/nexus/content/groups/public/'
     }
+}
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.0-milestone-5'
 }
 
 dependencies {
-    groovy group: 'org.codehaus.groovy', name: 'groovy', version: '1.8.3'
-    testCompile 'junit:junit-dep:4.10'
-    testCompile 'org.spockframework:spock-core:0.5-groovy-1.8'
+    groovy(
+            ['org.codehaus.groovy:groovy:1.8.3']
+    )
+    compile(
+            ['org.hamcrest:hamcrest-generator:1.3.RC2']
+          , ['org.hamcrest:hamcrest-core:1.3.RC2']
+    )
+    testCompile(
+            ['junit:junit-dep:4.10']
+          , ['org.spockframework:spock-core:0.5-groovy-1.8']
+    )
 }
