--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     testCompile(
             ['junit:junit-dep:4.10']
           , ['org.spockframework:spock-core:0.5-groovy-1.8']
+          , ['org.mockito:mockito-core:1.9.0-rc1']
     )
 }
