--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,5 +1,5 @@
 repositories {
-    mavenCentral()
+    mavenLocal()
     maven {
         url 'http://localhost:8081/nexus/content/groups/public/'
     }
@@ -9,7 +9,6 @@ dependencies {
     compile gradleApi()
     groovy localGroovy()
     compile(
-            ['org.hamcrest:hamcrest-generator:1.3.RC2']
-            , ['com.google.code.javaparser:javaparser:1.0.8']
+            ['com.github.signed.gradle.plugin:hamcrest-generator-source:0.0.1-SNAPSHOT']
     )
 }
