--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'hamcrest'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.6
 
@@ -32,6 +33,7 @@ dependencies {
     compile(
             ['org.hamcrest:hamcrest-generator:1.3.RC2']
           , ['org.hamcrest:hamcrest-core:1.3.RC2']
+          , ['org.hamcrest:hamcrest-library:1.3.RC2']
     )
     testCompile(
             ['junit:junit-dep:4.10']
