--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ idea {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.0-milestone-9'
+    gradleVersion = '1.0'
 }
 
 group='com.github.signed.matcher.file'
