--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'hamcrest'
 apply plugin: 'idea'
+apply plugin: 'maven'
 
 sourceCompatibility = 1.6
 
@@ -20,6 +21,7 @@ task wrapper(type: Wrapper) {
 }
 
 group='com.github.signed.matcher.file'
+version='0.0.1'
 
 hamcrest{
     configurationFile='file-matchers.xml'
