--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,21 @@ apply plugin: 'hamcrest'
 apply plugin: 'idea'
 apply plugin: 'maven'
 
+buildscript {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.github.signed.gradle.plugin:hamcrest-source-generator:0.0.1'
+    }
+}
+
 sourceCompatibility = 1.6
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -20,26 +32,20 @@ task wrapper(type: Wrapper) {
     gradleVersion = '1.3'
 }
 
-group='com.github.signed.matcher.file'
-version='0.0.1'
+group = 'com.github.signed.matcher.file'
+version = '0.0.1'
 
-hamcrest{
-    configurationFile='file-matchers.xml'
-    nameForMatcherClass='FileMatchers'
+hamcrest {
+    configurationFile = 'file-matchers.xml'
+    nameForMatcherClass = 'FileMatchers'
 }
 
 dependencies {
-    groovy(
-            ['org.codehaus.groovy:groovy:1.8.3']
-    )
     compile(
-            ['org.hamcrest:hamcrest-generator:1.3.RC2']
-          , ['org.hamcrest:hamcrest-core:1.3.RC2']
-          , ['org.hamcrest:hamcrest-library:1.3.RC2']
+            'org.hamcrest:hamcrest-core:1.3'
     )
     testCompile(
-            ['junit:junit-dep:4.10']
-          , ['org.spockframework:spock-core:0.5-groovy-1.8']
-          , ['org.mockito:mockito-core:1.9.0-rc1']
+            'junit:junit:4.11'
+            , 'org.mockito:mockito-core:1.9.0'
     )
 }
