--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.github.signed.gradle.plugin:hamcrest-source-generator:0.0.1'
+        classpath 'com.github.signed.gradle.plugin:gradle-hamcrest-plugin:0.0.2'
     }
 }
 
